updated home page

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://starduzsportsclub.github.io/website",
+  "homepage": "https://starduzsportsclub.github.io/website/",
   "name": "starduz-sports-club-website",
   "version": "0.1.0",
   "private": true,
